// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-ticket Renders \`extra-details-ticket\` with full tickets 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details extra-details-ticket v-tooltip--top"
  >
    <!---->
    <span
      class="v-badge time-line-flag v-badge--overlap theme--light"
    >
      <c-alarm-extra-details-chip-stub
        color="#2196F3"
        icon="note_add"
      />
      <span
        class="v-badge__wrapper"
      >
        <transition-stub
          name="scale-rotate-transition"
        >
          <span
            aria-atomic="true"
            aria-label="Badge"
            aria-live="polite"
            class="v-badge__badge transparent"
            role="status"
            style="bottom: calc(100% - 15px); left: calc(100% - 12px);"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate extra-details-ticket__badge-icon material-icons theme--light error--text"
              style="font-size: 14px;"
            >
              error
            </i>
          </span>
        </transition-stub>
      </span>
    </span>
  </span>
</div>
`;

exports[`extra-details-ticket Renders \`extra-details-ticket\` with full tickets 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div
    class="layout extra-details-ticket__list column"
  >
    <div
      class="text-md-center"
    >
      <strong>
        ticket-rule-name-1 Ok
      </strong>
      <div>
        By : ticket-author-1
      </div>
      <div>
        Date : 6:00:00
      </div>
      <div>
          Ticket number : ticket-1
      </div>
      <div>
          Comment : ticket-comment-1
      </div>
    </div>
    <div
      class="text-md-center"
    >
      <strong>
        ticket-rule-name-2 Failed
      </strong>
      <div>
        By : ticket-author-2
      </div>
      <div>
        Date : 07/08/2013 19:00:00
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="mt-2"
  >
    <!---->
  </div>
</div>
`;

exports[`extra-details-ticket Renders \`extra-details-ticket\` with full tickets and without failed last ticket 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details extra-details-ticket v-tooltip--top"
  >
    <!---->
    <span
      class="v-badge time-line-flag v-badge--overlap theme--light"
    >
      <c-alarm-extra-details-chip-stub
        color="#2196F3"
        icon="note_add"
      />
      <span
        class="v-badge__wrapper"
      >
        <transition-stub
          name="scale-rotate-transition"
        >
          <span
            aria-atomic="true"
            aria-label="Badge"
            aria-live="polite"
            class="v-badge__badge transparent"
            role="status"
            style="bottom: calc(100% - 15px); left: calc(100% - 12px); display: none;"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate extra-details-ticket__badge-icon material-icons theme--light error--text"
              style="font-size: 14px;"
            >
              error
            </i>
          </span>
        </transition-stub>
      </span>
    </span>
  </span>
</div>
`;

exports[`extra-details-ticket Renders \`extra-details-ticket\` with full tickets and without failed last ticket 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div
    class="layout extra-details-ticket__list column"
  >
    <div
      class="text-md-center"
    >
      <strong>
        ticket-rule-name-2 Failed
      </strong>
      <div>
        By : ticket-author-2
      </div>
      <div>
        Date : 07/08/2013 19:00:00
      </div>
      <!---->
      <!---->
    </div>
    <div
      class="text-md-center"
    >
      <strong>
        ticket-rule-name-1 Ok
      </strong>
      <div>
        By : ticket-author-1
      </div>
      <div>
        Date : 6:00:00
      </div>
      <div>
          Ticket number : ticket-1
      </div>
      <div>
          Comment : ticket-comment-1
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <!---->
  </div>
</div>
`;

exports[`extra-details-ticket Renders \`extra-details-ticket\` with full tickets and without failed last ticket 3`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div
    class="layout extra-details-ticket__list column"
  >
    <div
      class="text-md-center"
    >
      <strong>
        ticket-rule-name-2 Failed
      </strong>
      <div>
        By : ticket-author-2
      </div>
      <div>
        Date : 07/08/2013 19:00:00
      </div>
      <!---->
      <!---->
    </div>
    <div
      class="text-md-center"
    >
      <strong>
        ticket-rule-name-1 Ok
      </strong>
      <div>
        By : ticket-author-1
      </div>
      <div>
        Date : 6:00:00
      </div>
      <div>
          Ticket number : ticket-1
      </div>
      <div>
          Comment : ticket-comment-1
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <!---->
  </div>
</div>
`;
